# antimony-2.0

./: .gitignore  API_IMPLEMENTATION_SUMMARY.md  AUDIT_REPORT_DEC_6_2025.md  BACKEND_DEPLOYMENT_COMPLETE.md  BUG_BOUNTY_PROGRAM.md  CONSENSUS_IMPLEMENTATION.md  CONTRIBUTING.md  EXCHANGE_INTEGRATION_GUIDE.md  EXTERNAL_AUDIT_PACKAGE.md  LICENSE  MINING_API_DOCUMENTATION.md  MINING_API_QUICK_REFERENCE.md  Makefile  NEXT_STEPS.md  PHASE1_STATUS.md  PHASE2A_COMPLETION_REPORT.md  PHASE2B_SESSION_REPORT.md  PHASE2C_SESSION_REPORT.md  PHASE2D_SESSION_REPORT.md  PHASE2_PLAN.md  PHASE3_1_API_COMPLETE.md  PHASE3_1_IMPLEMENTATION.md  PHASE3_ROADMAP.md  PHASE4_COMPLETION_REPORT.md  PHASE4_PROGRESS_REPORT.md  PHASE5_COMPLETION_SUMMARY.md  PHASE5_FINAL_REPORT.md  PHASE5_PROGRESS_REPORT.md  PHASE7_COMPLETION_REPORT.md  PHASE7_FINAL_STATUS.txt  PHASE7_PROGRESS_REPORT.md  PHASE8_COMPLETION_REPORT.md  PHASE8_FINAL_STATUS.txt  PHASE8_PROGRESS_REPORT.md  PHASE8_STATUS.txt  PHASES_5_AND_6_COMPLETE.md  PHASE_3_1_MINING_PLAN.md  PROJECT_INITIALIZATION.md  QUICKSTART.md  QUICK_REFERENCE.md  (+30 more)
atmn-api/: BLOCK_VALIDATION_DOCUMENTATION.md  Cargo.toml  init_db.sql
atmn-api/src/: coinbase.rs  db.rs  errors.rs  handlers.rs  main.rs  main.rs.backup  middleware.rs  mining_manager.rs  models.rs  rate_limiter.rs  websocket.rs
atmn-api/src/handlers/: account.rs  auth.rs  blockchain.rs  fees.rs  health.rs  master.rs  mining.rs  mining.rs.backup2  transaction.rs  wallet.rs  wallets_new.rs
atmn-bridge/: .env.example
atmn-core/: .env.example  Cargo.toml  test_miner_quick.rs
atmn-core/src/: block.rs  chain_params.rs  consensus.rs  difficulty.rs  error.rs  genesis.rs  lib.rs  mempool.rs  miner.rs  miner_mt.rs  network.rs  storage.rs  transaction.rs  tx_builder.rs  types.rs
atmn-evm/: .env.example
atmn-explorer/: .env.example
atmn-mining-pool/: .env.example  Cargo.toml
atmn-mining-pool/src/: main.rs  main_simple_additions.md
atmn-node/: Cargo.toml
atmn-node/src/: blockchain.rs  error.rs  flood_protection.rs  handshake.rs  input_validator.rs  main.rs  mempool.rs  message_validator.rs  network.rs  peer_manager.rs  protocol.rs  rate_limiter.rs  rosetta_construction.rs  secure_rng.rs
atmn-rosetta/: Cargo.toml
atmn-rosetta/src/: converters.rs  error.rs  handlers.rs  main.rs  types.rs
atmn-wallet-web/: .env.example
