[package]
name = "atmn_api"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
atmn-core = { path = "../atmn-core" }
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9.2"
futures = "0.3"
totp-lite = "2.0"
base32 = "0.4"
rand = "0.8"

actix-cors = "0.7"
urlencoding = "2.1"
lazy_static = "1.4"

[profile.release]
opt-level = 3
