[package]
name = "atmn-core"
version = "0.1.0"
edition = "2021"
authors = ["Antimony Development Team <dev@antimony.carphatian.ro>"]
description = "Antimony Coin 2.0 - Core blockchain implementation"
homepage = "https://antimony.carphatian.ro"
repository = "https://github.com/msrusu87-web/antimony-2.0"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Cryptography
sha2 = "0.10"
ripemd = "0.1"
secp256k1 = { version = "0.28", features = ["global-context"] }
blake2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
bincode = "1.3"

# Database
rocksdb = "0.22"

# Networking
tokio-tungstenite = "0.21"
futures = "0.3"

# Utilities
hex = "0.4"
bytes = "1.5"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
num_cpus = "1.16"

# Testing
proptest = "1.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[[bin]]
name = "atmn-miner"
path = "bin/miner.rs"

[[bin]]
name = "mine-production"
path = "bin/mine_production.rs"

[[bin]]
name = "verify-blocks"
path = "bin/verify_blocks.rs"

[[bin]]
name = "sync-to-sqlite"
path = "bin/sync_to_sqlite.rs"

[dependencies.rusqlite]
version = "0.30"
features = ["bundled"]


[[bin]]
name = "check-balance"
path = "bin/check_balance.rs"

[[bin]]
name = "create-transaction"
path = "bin/create_transaction.rs"

[[bin]]
name = "submit-transaction"
path = "bin/submit_transaction.rs"

[[bin]]
name = "mine-to-height"
path = "bin/mine_to_height.rs"

[[bin]]
name = "mempool-manager"
path = "bin/mempool_manager.rs"
