[package]
name = "atmn-mining-pool"
version = "0.1.0"
edition = "2021"
authors = ["Antimony Development Team"]

[dependencies]
# Core
atmn-core = { path = "../atmn-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
