[package]
name = "atmn-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }

# Async runtime
futures = "0.3"
async-trait = "0.1"

# Security dependencies
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.25"
